docs/apache-airflow-providers-opensearch/1.6.0/_sources/_api/airflow/providers/opensearch/hooks/opensearch/index.rst.txt
:py:mod:`airflow.providers.opensearch.hooks.opensearch`
=======================================================

.. py:module:: airflow.providers.opensearch.hooks.opensearch


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.opensearch.hooks.opensearch.OpenSearchClientArguments
   airflow.providers.opensearch.hooks.opensearch.OpenSearchHook




.. py:class:: OpenSearchClientArguments


   Bases: :py:obj:`TypedDict`

   Typed arguments to the open search client.

   .. py:attribute:: hosts
      :type: str | list[dict] | None

      

   .. py:attribute:: use_ssl
      :type: bool

      

   .. py:attribute:: verify_certs
      :type: bool

      

   .. py:attribute:: connection_class
      :type: type[opensearchpy.Connection] | None

      

   .. py:attribute:: http_auth
      :type: tuple[str, str]

      


.. py:class:: OpenSearchHook(open_search_conn_id, log_query, open_search_conn_class = RequestsHttpConnection, **kwargs)


   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Provide a thin wrapper around the OpenSearch client.

   :param open_search_conn_id: Connection to use with OpenSearch
   :param log_query: Whether to log the query used for OpenSearch

   .. py:attribute:: conn_name_attr
      :value: 'opensearch_conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'opensearch_default'

      

   .. py:attribute:: conn_type
      :value: 'opensearch'

      

   .. py:attribute:: hook_name
      :value: 'OpenSearch Hook'

      

   .. py:method:: conn()


   .. py:method:: client()

      This function is intended for Operators that forward high level client objects.


   .. py:method:: search(query, index_name, **kwargs)

      Run a search query against the connected OpenSearch cluster.

      :param query: The query for the search against OpenSearch.
      :param index_name: The name of the index to search against


   .. py:method:: index(document, index_name, doc_id, **kwargs)

      Index a document on OpenSearch.

      :param document: A dictionary representation of the document
      :param index_name: the name of the index that this document will be associated with
      :param doc_id: the numerical identifier that will be used to identify the document on the index.


   .. py:method:: delete(index_name, query = None, doc_id = None)

      Delete from an index by either a query or by the document id.

      :param index_name: the name of the index to delete from
      :param query: If deleting by query a dict representation of the query to run to
          identify documents to delete.
      :param doc_id: The identifier of the document to delete.


   .. py:method:: get_ui_field_behaviour()
      :classmethod:

      Return custom UI field behaviour for OpenSearch Connection.



